[package]
name = "grass"
version = "0.12.0"
description = "A Sass compiler written purely in Rust"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities", "web-programming"]
keywords = ["scss", "sass", "css", "web"]
repository = "https://github.com/connorskees/grass"
authors = ["ConnorSkees <39542938+ConnorSkees@users.noreply.github.com>"]
edition = "2021"
include = ["src", "Cargo.toml", "README.md", "CHANGELOG.md", "Cargo.lock", "LICENSE"]
default-run = "grass"

[[bin]]
name = "grass"
path = "src/main.rs"
required-features = ["commandline"]

[lib]
name = "grass"
path = "src/lib.rs"
# crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
clap = { version = "2.34.0", optional = true }
# todo: use lazy_static
once_cell = "1.15.0"
# todo: use xorshift for random numbers
rand = { version = "0.8", optional = true }
# todo: update to use asref<path>
# todo: update to expose more info (for eww)
# todo: update to use text_size::TextRange
codemap = "0.1.3"
wasm-bindgen = { version = "0.2.68", optional = true }
# todo: benchmark using phf for global functions
phf = { version = "0.10.1", features = ["macros"] }
indexmap = "1.9.0"
# todo: do we really need interning for things?
lasso = "0.6"

[features]
# todo: no commandline by default
default = ["commandline", "random"]
# Option (enabled by default): build a binary using clap
commandline = ["clap"]
# Option (enabled by default): enable the builtin functions `random([$limit])` and `unique-id()`
random = ["rand"]
# Option: expose JavaScript-friendly WebAssembly exports
wasm-exports = ["wasm-bindgen"]

[dev-dependencies]
tempfile = "3.3.0"
paste = "1.0.3"

[profile.release]
debug = true
panic = "abort"
