[workspace]
members = [
    "crates/compiler",
    "crates/include_sass",
    "crates/lib",
]

[profile.release]
debug = 1
panic = "abort"
lto = true
codegen-units = 1

[profile.small]
inherits = 'release'
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
strip = true

[package]
name = 'grass-wasm'
edition = "2021"
version = "0.1.0"

[lib]
path = "crates/lib/src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
grass_compiler = { path = "crates/compiler" }
getrandom = { version = "0.2", features = ["js"] }
