[package]
name = "compiler"
version = "0.12.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "compiler"
path = "src/lib.rs"
# crate-type = ["cdylib", "rlib"]
bench = false

[dependencies]
# todo: use lazy_static
once_cell = "1.15.0"
# todo: use xorshift for random numbers
rand = { version = "0.8", optional = true }
# todo: update to use asref<path>
# todo: update to expose more info (for eww)
# todo: update to use text_size::TextRange
codemap = "0.1.3"
wasm-bindgen = { version = "0.2.68", optional = true }
# todo: benchmark using phf for global functions
phf = { version = "0.10.1", features = ["macros"] }
indexmap = "1.9.0"
# todo: do we really need interning for things?
lasso = "0.6"

[features]
default = ["random"]
# Option (enabled by default): enable the builtin functions `random([$limit])` and `unique-id()`
random = ["rand"]
# Option: expose JavaScript-friendly WebAssembly exports
wasm-exports = ["wasm-bindgen"]