[package]
name = "grass"
version = "0.13.4"
description = "A Sass compiler written purely in Rust"
readme = "../../README.md"
license = "MIT"
categories = ["command-line-utilities", "web-programming"]
keywords = ["scss", "sass", "css", "web"]
repository = "https://github.com/connorskees/grass"
authors = ["Connor Skees <39542938+ConnorSkees@users.noreply.github.com>"]
edition = "2021"
include = [
    "src",
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "Cargo.lock",
    "LICENSE",
]
default-run = "grass"
rust-version = "1.70"

[[bin]]
name = "grass"
path = "src/main.rs"
required-features = ["commandline"]

[lib]
name = "grass"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
bench = false


[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --features=macro --no-deps --open
features = ["macro"]
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", features = ["js"] }
grass_compiler = { path = "../compiler", version = "=0.13.4", default-features = false }
include_sass = { path = "../include_sass", version = "0.13.4", optional = true }
clap = { version = "4.3.10", optional = true }

[features]
# todo: no commandline by default
default = ["commandline", "random"]
# Option (enabled by default): build a binary using clap
commandline = ["clap"]
random = ["grass_compiler/random"]
wasm-exports = ["grass_compiler/wasm-exports", "wasm-bindgen"]
# Option: include the proc macro `include_sass!`
macro = ["include_sass"]
nightly = ["include_sass/nightly"]

[dev-dependencies]
tempfile = "3.3.0"
paste = "1.0.3"
